@@ -121,6 +121,10 @@ ifeq ($(CONFIG_CAN),y)
 CHIP_CSRCS	+= stm32_can.c
 endif
 
+ifeq ($(CONFIT_STM32_WWDG),y)
+CHIP_CSRCS	+= stm32_wdg.c
+endif
+
 ifeq ($(CONFIG_DEBUG),y)
 CHIP_CSRCS	+= stm32_dumpgpio.c
 endif
