@@ -2654,3 +2654,9 @@
 	* drivers/watchdog.c:  The "upper half" watchdog timer driver.
 
 6.18 2012-xx-xx Gregory Nutt <gnutt@nuttx.org>
+
+	* Kconfig:  Continued Kconfig file updates (no longer tracking on a per-file
+	  basis in the ChangeLog)
+	* arch/arm/src/stm32/stm32_wdog.c:  Add the framework for an STM32 watchdog
+	  timer driver (the driver is merely a "skeleton" file on initial check-in
+	  but will be fleshed out over the next days).
